Auth swagger updated
